--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -317,49 +317,82 @@ input.post-button {
 
 // Timer Animation
 .timer_wrap {
+	width: 304px;
+  height: 216px;
+  background-color: $turquoise-dark;
+	box-shadow: 0 4px 0 0 darken($turquoise-dark, 10%);
+	border: solid 2px #fafafa;
+	margin: 0 auto;
+
+	&.player {
+		pointer-events: none;
+		cursor: normal;
+	}
+
 	button {
     background: none;
     border: none;
     max-width: 196px;
+    height: 164px;
 	}
 	svg {
-		// width: 82% !important;
-		margin: 20px auto;
-    max-width: 196px;
+		margin: 0px auto;
+		margin-top: -40px;
+    max-width: 152px;
 	}
 	h1 {
     font-family: $header-type;
-    font-size: 20px;
+    font-size: 16px;
     margin-top: 1%;
     font-family: AvenirNext-Bold;
 	}
 	p {
     display: inline-block;
-    margin-top: 48%;
-    font-size: 17px;
+    // margin-top: 48%;
+    font-size: 16px;
     width: 100%;
+    padding: 8px;
+		background-color: $background-color;
+		height: 48px;
     text-align: center;
     font-family: AvenirNext-DemiBold;
 	}
 	.progressbar-text {
-		font-size: 72px;
+		font-size: 46px;
 		letter-spacing: -2.1px;
-    margin-top: -89%;
+    margin-top: -76%;
     color: white !important;
     font-family: AvenirNext-DemiBold;
 	}
 
 	&.running {
+
+		.timer {
+			margin-top: 45px;
+		}
+		.progressbar-text {
+	    top: 44% !important;
+		}
 		.speech {
 			position: relative;
 			z-index: 1;
-			// h1 {
-			// 	margin-top: -29%;
-			// }
-			p {
-				margin-top: 26%;
-			}
+			font-size: 16px;
+			margin-top: -58px;
 		}
+
+		span {
+			width: 100%;
+			color: #61f5de;
+			font-family: AvenirNext-Medium;
+		}
+
+		p {
+				padding: 8px;
+				margin-top: 35px;
+				width: 100%;
+				background-color: $background-color;
+				height: 48px;
+			}
 	}
 }
 
@@ -714,6 +747,7 @@ input.post-button {
   	margin-bottom: 15px;
   }
   #btn-close-role-card {
+  	cursor: pointer;
   	p {
   		margin: 0px;
   		font-family: AvenirNext;
