--- a/templates/partials/shared/pitch.hbs
+++ b/templates/partials/shared/pitch.hbs
@@ -16,11 +16,11 @@
 
 		{{> component/speech 
 				decider=true
-				body="This is the pitch phase! Everyone will take turns pitching their proposal while others listen and take notes."
+				body="Now that everyone has thought of their proposal, you will all take turns pitching your ideas to the group. Each player will have 60 seconds to pitch"
 		}}
 
 		{{> component/speech
-				body="This is the pitch phase! Everyone will take turns pitching their proposal while others listen and take notes."
+				body="Now that everyone has thought of their proposal, you will all take turns pitching your ideas to the group. Each player will have 60 seconds to pitch"
 		}}
 
 	</div>
@@ -40,11 +40,11 @@
 
 		{{> component/speech 
 				decider=true
-				body=(combine 'Everyone will have ' config.pitchSeconds ' seconds to pitch. If you want more time, you can pay 50 coins and receive another 30 seconds.')
+				body="Once your 60 seconds are up, you will see the option on your screen to pay 50 coins and receive another 30 seconds."
 		}}
 
 		{{> component/speech
-				body=(combine 'Everyone will have ' config.pitchSeconds ' seconds to pitch. If you want more time, you can pay 50 coins and receive another 30 seconds.')
+				body="Once your 60 seconds are up, you will see the option on your screen to pay 50 coins and receive another 30 seconds."
 		}}
 
 	</div>
@@ -79,8 +79,8 @@
 
 		{{> component/instructions
 				decider=true 
-				heading="Press the button to start the timer"
-				body="Make sure the player pitching is ready, then start the timer."
+				heading="Announce whose turn it is"
+				body="Make sure the player pitching is ready, then press the button to start the timer. "
 		}}
 
 		{{!-- active player --}}
@@ -94,7 +94,7 @@
 		{{> component/instructions 
 				inactive_player=player.isInactive
 				heading="Listen to the other player’s proposal"
-				body="Take notes on other player’s proposals so you can better engage critically during deliberation!"
+				body="Take notes on other player’s proposals so you can chime in during deliberation!"
 		}}
 
 		{{!-- Timer in button mode  --}}
@@ -147,7 +147,8 @@
 		{{> component/timer 
 				time=config.pitchSeconds
 				active_player=player.isActive
-				body=(combine activePlayer.username ' is currently pitching.')
+				body=activePlayer.username
+				role=activePlayer.role.title
 				body_active=player.question
 		}}
 
