--- a/templates/partials/component/choice.hbs
+++ b/templates/partials/component/choice.hbs
@@ -63,7 +63,7 @@
 				{{#ifeq doubledown true}}
 
 				  <h1>Pay <strong>{{config.doubledownTimeCost}} coins</strong> to the pot to double down?</h1>
-				  <h2>For {{config.doubledownTimeCost}} coins, the floor is yours exclusively for {{config.doubledownSeconds}} seconds.</h2>
+				  <h2>Speak uninterupted for {{config.doubledownSeconds}} seconds. The floor is yours!</h2>
 
 				{{else}}
 
