--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -79,15 +79,16 @@
 
 		{{> component/instructions 
 				heading="Listen to the decider"
+				body="The Decider is about to determine if your agenda items are in the winning proposal!"
 		}}
 
 		{{> component/speech 
 				decider=true
-				body="Now that we have a winning proposal, lets reveal everyone's hidden agenda items and see if you received bonus coins!"
+				body="Now that we have a winning proposal, lets reveal everyone's hidden agenda items and determine if you will receive bonus coins!"
 		}}
 
 		{{> component/speech 
-				body="Now that we have a winning proposal, lets reveal everyone's hidden agenda items and see if you received bonus coins!"
+				body="Now that we have a winning proposal, lets reveal everyone's hidden agenda items and determine if you will receive bonus coins!"
 		}}
 
 	</div>
@@ -186,17 +187,18 @@
 		}}
 
 		{{> component/instructions 
-				heading="Get ready for the Score phase"
+				heading="Listen to the Decider"
+				body="Get ready to see your score!"
 		}}
 
 		{{> component/speech 
 				decider=true
 				advance=true
-				body="Congratulations everyone! Now we will see everyone's new score and find out who is in the lead. The player who's proposal was chosen is the next round's decider!"
+				body="Congratulations everyone! Now we will see everyone's new score and find out who is in the lead."
 		}}
 
 		{{> component/speech 
-				body="Congratulations everyone! Now we will see everyone's new score and find out who is in the lead. The player who's proposal was chosen is the next round's decider!"
+				body="Congratulations everyone! Now we will see everyone's new score and find out who is in the lead."
 		}}
 
 	</div>
