--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -32,8 +32,8 @@
 		{{#if winner}}
 
 			{{!-- winner modal --}}
-			<div class="modal inner-modal winner" data-duration="{{config.decideDuration}}" data-next="next_screen">
-				<div class="inner">
+			<div id="winner-modal" class="modal inner-modal" data-duration="{{config.decideDuration}}" data-next="next_screen">
+				<div class="inner inner-winner">
 
 					<h1>Congratulations, <strong>{{winner.username}}</strong>!</h1>
 					<h2>{{pluralize winner.username}} proposal was selected as the winner and recieves all the coins in the pot!</h2>
