--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -36,7 +36,7 @@
 				<div class="inner">
 
 					<h1>Congratulations, <strong>{{winner.username}}</strong>!</h1>
-					<h2>{{pluralize winner.username}} proposal was selected as the winner and recieves all the coins in the pot!</h2>
+					<h2>{{pluralize winner.username}} proposal was selected by the Decider and recieves all the coins in the pot!</h2>
 
 			    <div id="reward-icon" class="player-box">
 				    <div class="coins">{{potAmount}}</div>
