--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -385,9 +385,6 @@ socketEvents = function(eventId, eventData) {
             break;
 
         case 'game:start':
-        
-            if (!$('.rules-screen').css('display', 'block'))
-                $('#background-logo').show();
 
             $('#bottom-bar').show();
             
@@ -461,7 +458,7 @@ socketEvents = function(eventId, eventData) {
             if(isDecider){
                     ion.sound.play("click3");
                 }
-            if (!$('.rules-screen').css('display', 'block'))
+            if ($('#background-logo').css('display', 'none'))
                 $('#background-logo').show();
 
             $('#bottom-bar').show();
