--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -159,7 +159,7 @@ function innerModalOpenClose(modalElement, open) {
 
 }
 
-function quitOpenClose(open) {
+function quitOpenClose(open, message) {
 
 	var menuStart, menuEnd, quitStart, quitEnd;
 	var timeline = new TimelineLite();
