--- a/templates/partials/component/choice.hbs
+++ b/templates/partials/component/choice.hbs
@@ -37,7 +37,7 @@
 				<h2>Whoever wins receives all the coins in the coin pot!</h2>
 
 				{{#each players}}
-			    <div id="player-{{icon}}" class="post-button submit player-box player-logo btn" style="cursor:default;">
+			    <div id="player-{{icon}}" class="player-box player-logo" style="cursor:default;">
 				    <div class="coins"></div>
 					  <div class="info">
 						  <h1>{{username}}</h1>
