--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -16,6 +16,7 @@
 
 	body .inner-modal .inner .player-box {
 		background-position: 20px 0px;
+		padding-left: 5%;
 		.coins {
 			padding-top: 40px;
 			padding-left: 15px;
