--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -353,11 +353,11 @@ input.post-button {
     // margin-top: 48%;
     font-size: 16px;
     width: 100%;
-    padding: 8px;
+    padding: 8px 6px;
 		background-color: $background-color;
 		height: 48px;
     text-align: center;
-    font-family: AvenirNext-DemiBold;
+    font-family: AvenirNext;
 	}
 	.progressbar-text {
 		font-size: 46px;
@@ -851,6 +851,9 @@ input.post-button {
 		  font-size: 16px;
 		  font-weight: 500;
   		display:inline;
+  		div {
+  			font-size: 14px;
+  		}
   	}
   }
   .agenda-item {
@@ -958,7 +961,7 @@ input.post-button {
 // Speech bubbles
 blockquote.speech {
     position: relative;
-    text-align: justify;
+    text-align: left;
     font-size: 16px;
     width: 100%;
     height: 287px;
