--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -29,7 +29,7 @@
 		padding-top: 0px;
 
 		&.in-game {
-			padding-top: 25px;
+			padding-top: 40px;
 		}
 		#lobby #name.lobby .login-footer {
 			padding: 0px 35px;
@@ -110,7 +110,6 @@
 
 	body .timer_wrap {
 		p {
-			margin-top: 15%;
 			width: 100%;
 		}
 	}
@@ -186,6 +185,22 @@
 		top: 20px;
 
 
+	}
+
+	body .inner-modal .inner {
+		height:80%;
+
+		#game-menu {
+			#logo-header {
+				width: 200px;
+			}
+			.btn {
+				margin-bottom: 2%;
+			}
+			.btn_cap {
+				margin-bottom: 15px;
+			}
+		}
 	}
 
 	body .inner-modal .inner .player-box {
