--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -941,7 +941,6 @@ input.post-button {
 	h1 {
 		font-size: 16px;
 		line-height: 1.5;
-		font-weight: bold;
 		font-family: AvenirNext-Bold;
 	}
 
@@ -1132,6 +1131,7 @@ footer#bottom-bar {
 	width: 100%;
 	bottom: 0px;
 	left: 0px;
+	height:90px;
 	position: absolute;
 	padding-top: 5px;
 	max-width: 425px;
@@ -1140,6 +1140,7 @@ footer#bottom-bar {
 	.col-sm-6, .col-xs-6 {
 		padding-left:8px;
 		padding-right:8px;
+		height: 100%;
 	}	
 
 	#currency {
