line height update

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -974,7 +974,7 @@ blockquote.speech {
     background-position:center;
     p {
     	color: white;
-    	line-height: 1.5;
+    	line-height: 24px;
     	font-family: AvenirNext-DemiBold;
     }
 
