--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -1056,7 +1056,7 @@ blockquote.speech {
 	}
 		
 	.player-logo {
-
+    background-color: #00c2a9;
 		width: 96%;
 		border-radius: 0px;
 		font-size: 20px;
@@ -1129,7 +1129,7 @@ blockquote.speech {
 footer#bottom-bar {
 	font-size: large;
 	width: 100%;
-	bottom: 0px;
+	bottom: 8px;
 	left: 0px;
 	height:90px;
 	position: absolute;
