--- a/templates/partials/component/timer.hbs
+++ b/templates/partials/component/timer.hbs
@@ -53,9 +53,13 @@
         </div>
 
         {{#ifeq active_player true}}
+          {{#ifeq stage 'doubledown'}}
             {{#if body_active}}<p>{{body_active}}<br><span>{{role}}</span></p>{{/if}}
+          {{else}}
+            {{#if body}}<p>{{body}}<br><span>{{role}}</span></p>{{/if}}
+          {{/ifeq}}
         {{else}}
-          {{#if body}}<p>{{body}}<br><span>{{role}}</span></p>{{/if}}
+            {{#if body}}<p>{{body}}<br><span>{{role}}</span></p>{{/if}}
         {{/ifeq}}
 
   </div>
