--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -936,6 +936,7 @@ input.post-button {
 .instruction {
 	font-size:16px;
 	height: 72px;
+	margin-bottom: 4px;
 	font-family: AvenirNext;
 
 	h1 {
@@ -1045,7 +1046,6 @@ blockquote.speech {
 	}
 
 	#ranking {
-		background-color: $turquoise-dark;
 		padding: 3%;
 
     display: -webkit-flex; /* Safari */
